# myRC5

./: CMakeLists.txt  Praktika.docx  Praktika1.docx  readme.txt
files/: decodedoutput.txt  output.txt
include/: bytestoint64.h  decode.h  decodefile.h  encode.h  encodefile.h  functions.h  int64max.h  int64tobytes.h  makekey.h  maketables.h  mydefines.h  rol.h  ror.h
src/: bytestoint64.c  decode.c  decodefile.c  encode.c  encodefile.c  int64max.c  int64tobytes.c  main.c  makekey.c  maketables.c  rol.c  ror.c
